<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">The Translator</string>

    <string name="about">About</string>
    <string name="about_summary"><i>An application to help translating other android apps!</i></string>
    <string name="add_text_hint">add-text-here</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="change_logs">Change-logs</string>
    <string name="credits">Credits</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_auto">Auto</string>
    <string name="dark_theme_disable">Disable</string>
    <string name="dark_theme_enable">Enable</string>
    <string name="delete_line_question">Sure deleting \'%s\'?</string>
    <string name="delete_string">Delete \'string\'</string>
    <string name="delete_string_message">Are you sure to delete current string.xml?</string>
    <string name="developed_by">Developed By</string>
    <string name="device_storage">Device Storage</string>
    <string name="discard">Discard</string>
    <string name="discard_message">Discard the contents added to this page?</string>
    <string name="dismiss">Dismiss</string>
    <string name="donations">Donations</string>
    <string name="donations_message">If you like to appreciate my work, please consider buying SmartPack Donation Package from Google Play as it is really helpful to continue my projects more active, although it is not at all necessary.</string>
    <string name="donations_summary">If you like to appreciate the efforts of the developer to provide this application entirely free, non-intrusive and without ads, please consider supporting the development in some way. Click here to know more. Thank you!</string>
    <string name="edit_string_warning">Please be careful with the special characters (%s) in your text!</string>
    <string name="file_permission_request_message">In order to get this feature working on newer Android versions (Android R or newer), it is necessary to grant \"All files access\" permission to The Translator. Kindly grant the permission manually from the new screen opened after clicking the \"Grant\" button.</string>
    <string name="find_and_replace">Find &amp; Replace</string>
    <string name="find_and_replace_question">Replace all the \"%s\" with</string>
    <string name="grant">Grant</string>
    <string name="illegal_string_message">You\'ve entered some illegal characters! Your changes won\'t be saved.</string>
    <string name="illegal_string_warning">Some character\'s are considered illegal in \'xml\' format and are not acceptable! Please be noted that the entire text will be neglected (or even app crashes in the worst case) when an illegal character is detected!\n\nSome of the prohibited characters include, but are not limited to\n&amp; - except for certain words\n&lt; and &gt; - except for certain cases such as &lt;b&gt;, &lt;/b&gt;, &lt;i&gt;, &lt;/i&gt; etc.\nSingle (\') or double (\") quotation marks without a backward slash (\\) in the front, etc.</string>
    <string name="import_string">Import</string>
    <string name="import_string_error">\'%s\' is not a proper language string. Aborting!</string>
    <string name="import_string_message">You haven\'t imported any \'string\' translation file yet. Go to the \'Settings\' menu to import one from \'sdcard\'!</string>
    <string name="import_string_sdcard">Import \'string\'</string>
    <string name="import_string_snackbar">You haven\'t imported any translation \'string\' file yet!</string>
    <string name="importing">Importing…</string>
    <string name="insert">Insert</string>
    <string name="insert_invalid_string">You\'re inserted invalid data! Aborting.</string>
    <string name="insert_message">Simply copy-paste the contents of an XML string file (partly or completely) on this screen and click the \'Apply\' button to continue.</string>
    <string name="licence">Licence</string>
    <string name="more_apps">More from Developer</string>
    <string name="more_apps_summary">Checkout more applications provided by the developer in Google Play</string>
    <string name="name_empty">Name is empty! Aborting!</string>
    <string name="no_internet">Please check your internet connection!</string>
    <string name="permission_denied_write_storage">Permission denied for writing to storage!</string>
    <string name="please_note">Please Note</string>
    <string name="press_back">Press back again to exit</string>
    <string name="rate_us">Rate App</string>
    <string name="rate_us_Summary">Rate and/or Review The Translator in Google Play</string>
    <string name="report_issue">Report an Issue</string>
    <string name="report_issue_summary">Raise an issue at GitHub</string>
    <string name="replace">Replace</string>
    <string name="save">Save</string>
    <string name="save_string_message">New translation string is generated as \'%s\'!</string>
    <string name="save_string_replace">%s already exists! Do you want to replace it?</string>
    <string name="search_hint">Search…</string>
    <string name="select_question">Select %s?</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_app">Share App</string>
    <string name="share_app_Summary">Invite your friends to try The Translator</string>
    <string name="shared_by">%s/shared by The Translator</string>
    <string name="share_message">The Translator v%s can be obtained from Google Play: https://play.google.com/store/apps/details?id=com.sunilpaulmathew.translator</string>
    <string name="share_with">Share with</string>
    <string name="source_code">Source Code</string>
    <string name="source_code_summary">The Translator is an open-source application which is ready to accept contributions from the development community. Click here to check out the source code!</string>
    <string name="support">Support Group</string>
    <string name="support_summary">Join Telegram support group</string>
    <string name="translations">Translations</string>
    <string name="translations_summary">Help me to translate this app! Click here to get the original language strings in English</string>
    <string name="update">Update</string>
    <string name="url">URL</string>
    <string name="view_string">View \'string\'</string>
    <string name="warning">Warning</string>
    <string name="with">with</string>
    <string name="wrong_extension">Please select a file with %s extension.</string>
    <string name="yes">Yes</string>
</resources>
