<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:orientation="vertical" >

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insert_message"
            android:background="@color/black"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="17sp"
            android:gravity="center"
            android:padding="25dp"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="15dp" >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:hint="@string/add_text_hint"
                android:textColorHint="@color/blue"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:textStyle="bold"
                android:gravity="start"
                android:textSize="15sp" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/black"
        android:layout_alignParentBottom="true" >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="start|center_horizontal"
            android:layout_marginEnd="25dp"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:padding="10dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/insert_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="end|center_horizontal"
            android:layout_marginStart="25dp"
            android:text="@string/apply"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:padding="10dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>