<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="top|center_vertical"
            android:padding="10dp" >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/blue"
                android:layout_gravity="start"
                android:textStyle="bold"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/search_button"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginEnd="50dp"
                android:layout_gravity="end|center"
                android:src="@drawable/ic_search"
                android:background="@color/black"
                android:tint="@color/blue" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/settings_menu"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="end|center"
                android:src="@drawable/ic_settings"
                android:background="@color/black"
                android:tint="@color/blue" />
        </FrameLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/about_app"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:text="@string/about_summary"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/search_Text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:maxLines="1"
            android:textAlignment="center"
            android:hint="@string/search_hint"
            android:textColor="@color/blue"
            android:textColorHint="@color/blue"
            android:backgroundTint="@color/blue"
            android:visibility="gone"
            android:textSize="16sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>